FCTF-k3s-manifest/prod/ingress/nginx/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: admin.fctf.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-mvc-svc 
                port:
                  number: 8000
  tls:
    - hosts:
        - admin.fctf.site
      secretName: admin-tls
