FCTF-k3s-manifest/prod/ingress/nginx/filebrowser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: filebrowser-zmn0zjiwmju.fctf.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
  tls:
    - hosts:
        - filebrowser-zmn0zjiwmju.fctf.cloud
      secretName: filebrowser-tls
