FCTF-k3s-manifest/prod/ingress/nginx/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: db
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: rabbitmq.fctf.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
  tls:
    - hosts:
        - rabbitmq.fctf.site
      secretName: rabbitmq-tls
